[ADD] mybatis 废品

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,16 +5,10 @@
     <title>welcome</title>
 </head>
 <body>
-<h2>陈车夫吃屎啦你  陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你
-    陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你
-    陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你
-    陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你
-    陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你
-    陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你
-    陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你
-    陈车夫吃屎啦你陈车夫吃屎啦你陈车夫吃屎啦你
-    陈车夫吃屎啦你陈车夫吃屎啦你
-    陈车夫吃屎啦你陈车夫吃屎啦你
-    陈车夫吃屎啦你陈车夫吃屎啦你!</h2>
+<h2>hello world ！</h2>
+
+<form action="/mybatis/test">
+    <input type="submit" value="提交"/>
+</form>
 </body>
 </html>
