update javaConfig WebSecurity配置

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,7 +5,7 @@
     <title>welcome</title>
 </head>
 <body>
-<h2>hello world ！</h2>
+<h2>hello world !</h2>
 
 <form action="/mybatis/test">
     <input type="submit" value="提交"/>
