super update :文件上传模块 profile配置

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,8 +7,9 @@
 <body>
 <h2>hello world !</h2>
 
-<form action="/mybatis/test">
-    <input type="submit" value="提交"/>
+<form action="/test/upload" method="post" enctype="multipart/form-data">
+    <input type="file" name="file">
+    <input type="submit" value="submit">
 </form>
 </body>
 </html>
